# The_Doe_Agency

./: .bandit  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml  codeql-analysis.yml
base/: models.py
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/fixtures/: group.json  user.json
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_alter_user_last_updated.py
envs/: .dev-env  .prod-env
project/: celery.py  logging.py  settings.py  test_urls.py  urls.py  user_agents.py
scraper/: admin.py  check.py  models.py  scrape.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
scraper/fixtures/: crontabschedule.json  intervalschedule.json  page.json  periodictask.json  website.json
scraper/html/: spy1.html  sslp.html
scraper/management/commands/: check_proxies.py  save_page_source.py  scrape.py  scrape_sites.py
scraper/migrations/: 0001_initial.py  0002_auto_20210719_1549.py  0003_auto_20210725_1741.py  0004_auto_20210730_1518.py
scraper/scrapers/: common.py  fpcz.py  fpls.py  freeproxy.py  freeproxylists.py  spy1.py  spysone.py  sslp.py  sslproxies.py
utils/: decorators.py
