[tool.poetry]
name = "the_doe_agency"
version = "0.1.0"  # change in settings.py as well
description = "An agency by John and Jane Doe providing proxy lists to the unknowns"
authors = ["Md Zubair Beg <ziibii88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
django = "^3.2"
djangorestframework = "^3.12"
Markdown = "^3.3"
django-filter = "^2.4"
python-decouple = "3.4"
psycopg2 = "^2.9"
sentry-sdk = "^1.3"
mypy = "^0.910"
django-stubs = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
black = "^21.6b0"
bandit = "^1.7.0"
pyupgrade = "^2.21"
pre-commit = "^2.13"
django-debug-toolbar = "^3.2.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "project.settings"
