[tool.poetry]
name = "the_doe_agency"
version = "0.1.0"  # change in settings.py as well
description = "An agency by John and Jane Doe providing proxy lists to the unknowns"
authors = ["Md Zubair Beg <ziibii88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
django = "^3.2"
djangorestframework = "^3.12"
Markdown = "^3.3"
django-filter = "^2.4"
python-decouple = "^3.4"
psycopg2 = "^2.9"
sentry-sdk = "^1.3"
mypy = "^0.910"
django-stubs = "^1.8.0"
django-health-check = "^3.16.4"
psutil = "^5.8.0"
djangorestframework-stubs = "^1.4.0"
djangorestframework-simplejwt = "^4.7.2"
requests = "^2.26.0"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.9.3"
django-countries = "^7.2.1"
requests-cache = "^0.7.1"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
black = "^21.6b0"
bandit = "^1.7.0"
pyupgrade = "^2.21"
pre-commit = "^2.13"
django-debug-toolbar = "^3.2.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[mypy.plugins.django-stubs]
django_settings_module = "project.settings"
